--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,7 @@ show_downloads: True
 navigation:
   - title: KBS - Home
     url: http://kbsezginel.github.io
-  - title: Kutmatik - reports
+  - title: Main
     url: /
+  - title: Reports
+    url: /reports
